# pds-netra

./: .gitignore  AGENTS.md  Makefile  PROJECT_SUMMARY.txt  README.md  SETUP.md  debug_face.py  docker-compose.prod.yml  runbook.txt  verify_import.py
digital-netra-backend/: alembic.ini  pyproject.toml
digital-netra-backend/alembic/: env.py
digital-netra-backend/alembic/versions/: 20260305_01_create_app_user_table.py  20260305_02_add_name_fields.py  20260305_03_create_camera_table.py  20260306_01_create_edge_device_and_camera_edge_id.py  20260306_01_create_rule_type_table.py  20260306_02_create_rule_type_table.py  20260306_03_extend_edge_device_and_camera_approval.py  20260306_04_create_user_rule_type_table.py  20260307_01_create_zone_table.py  20260307_02_create_rules_table.py
digital-netra-backend/app/: main.py
digital-netra-backend/app/core/: config.py  db.py  security.py
digital-netra-backend/app/models/: __init__.py  app_user.py  camera.py  edge_device.py  rule.py  rule_type.py  user_rule_type.py  zone.py
digital-netra-backend/app/schemas/: auth.py  camera.py  edge_device.py  rule.py  rule_type.py  user_rule_type.py  zone.py
digital-netra-backend/app/services/: live_frames.py
pds-netra-backend/: Dockerfile  alembic.ini  pyproject.toml  test_db.py  test_env_loading.py
pds-netra-backend/alembic/: env.py
pds-netra-backend/app/: __init__.py  main.py  worker.py
pds-netra-backend/data/: seed_godowns.json
pds-netra-backend/tests/: test_after_hours.py  test_animal_intrusion.py  test_auth_godown_ownership.py  test_auth_poc.py  test_authorized_users_face_index_auth.py  test_camera_zones_calibration.py  test_dispatch_movement_delay.py  test_errors.py  test_fire_detection.py  test_known_faces_atomic.py  test_live_frames.py  test_notification_outbox.py  test_pagination_limits.py  test_rate_limit.py  test_station_monitoring.py  test_watchlist.py
(+414 files in other folders)
