[tool.poetry]
name = "pds-netra-backend"
version = "0.1.0"
description = "PDS Netra Central Backend"
authors = ["PDS Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.6"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.0"
alembic = "^1.12.0"
paho-mqtt = "^1.6.1"
PyYAML = "^6.0"
python-multipart = "^0.0.9"
twilio = "^9.0.0"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
